log-output/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: mypvc
      containers:
        - name: logoutput-reader
          image: k3s-default-registry:5000/log-output-reader:v0.5
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: 50m
              memory: 64M
        - name: logoutput-writer
          image: k3s-default-registry:5000/log-output-writer:v0.3
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: 50m
              memory: 64M
